# test_dgango

hw20/: pyproject.toml
hw20/githubapp/: db.sqlite3  manage.py
hw20/githubapp/githubapi/: apps.py  models.py  tasks.py  views.py
hw20/githubapp/githubapi/migrations/: 0001_initial.py
hw20/githubapp/githubapi/templates/githubapi/: index.html  result.html
hw20/githubapp/githubapp/: asgi.py  settings.py  urls.py  wsgi.py
