[tool.poetry]
name = "hw20"
version = "0.1.0"
description = ""
authors = ["Kozlov Aleksandr <kozlovan5@it.mos.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
celery = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
